# dask-gateway-dashboard

./: .pre-commit-config.yaml  Dockerfile  README.md  dask_gateway_dashboard.py  index.html  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish.yaml  test.yaml
tests/: conftest.py  test_app.py  test_page.py
